# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\AsesmenController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Auth\RegisteredUserController;
@@ -30,6 +31,10 @@ Route::post('/login', [AuthenticatedSessionController::class, 'store'])
 Route::get('/matakuliah', [MataKuliahController::class, 'index'])
                 ->middleware('auth')
                 ->name('matakuliah.index');
+
+Route::get('/asesmen/{mata_kuliah_uuid}', [AsesmenController::class, 'index'])
+                ->middleware('auth')
+                ->name('asesmen.index');
 
 Route::get('/logout', [AuthenticatedSessionController::class, 'destroy'])
                 ->middleware('auth:sanctum')
